--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "io.ionic.contactscrud",
   "appName": "ic3-contacts-crud",
   "bundledWebRuntime": false,
   "npmClient": "npm",
