--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/router": "~8.2.14",
     "@capacitor/android": "^1.5.1",
     "@capacitor/core": "1.5.1",
+    "@ionic-native/contacts": "^5.22.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.2.0",
+    "cordova-plugin-contacts": "^3.0.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
