Setup native contact CRUD function :: with bugs

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,8 +1,12 @@
 {
-  "appId": "io.ionic.contactscrud",
+  "appId": "io.ionic.contacts-crud",
   "appName": "ic3-contacts-crud",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
-  "cordova": {}
+  "cordova": {},
+  "server": {
+    "url": "http://localhost:8100",
+    "cleartext": true
+  }
 }
