Fix new contact saving

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -7,6 +7,8 @@
   "cordova": {},
   "server": {
     "url": "http://localhost:8100",
-    "cleartext": true
+    "cleartext": true,
+    "originalUrl": "http://localhost:8100",
+    "originalCleartext": true
   }
 }
